Added image_gallery stylesheet And new images

--- a/teddy.html
+++ b/teddy.html
@@ -6,7 +6,7 @@
     <title>Cute page for Teddy</title>
     <link rel="stylesheet" href ="header.css">
     <link rel="icon" href="Image/Teddy_logo-removebg-preview.png" type="image/icon type">
-    
+    <link rel="stylesheet" href = "image_gallery.css">
 </head>
 <body>
     <div class = "top_half">
@@ -29,9 +29,18 @@
     </div>
     <div class = "image_gallery">
         <div class = Border>
-            <img class = "thumbnail" src>
-            <p>title 1</p>
+            <img class = "thumbnail" src ="Image/Teddy1.jpg">
+            <p class ="border_text">Goofy looking mf</p>
         </div>
+        <div class = Border>
+            <img class = "thumbnail" src ="Image/Teddy2.jpg">
+            <p class ="border_text">Swag</p>
+        </div>
+        <div class = Border>
+            <img class = "thumbnail" src ="Image/Teddy3.jpg">
+            <p class ="border_text">PP dog</p>
+        </div>
+        
     </div>
     <div>
 
